Restore the lowercase path to opencv shared data

Add back the lowercase path to the OpenCV data (e.g. the haar cascades),
as it was before commit b8a9b3f23f073e899cede16c351ca9119d8af510.

This makes likface able to use again system OpenCV data, at least on
Debian systems.

BUG: 337507